Fix scrollbar for a11y

--- a/docs/.vuepress/theme/styles/main.styl
+++ b/docs/.vuepress/theme/styles/main.styl
@@ -7,9 +7,6 @@
 body, h1, h2, h3, h4, h5, #app .ui.menu
   font-family: 'FFXIV', Lato, Helvetica Neue, "Microsoft Yahei", "微软雅黑", Arial, Helvetica, sans-serif;
 
-::-webkit-scrollbar
-  width 2px
-
 ::-webkit-scrollbar-track
   -webkit-box-shadow inset 0 0 6px rgba(0,0,0,0.3)
 
